--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
     <title>ZapRecall</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Recursive:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
